# Project-1

./: .gitignore  GEMINI.md  Kubespray_VM_Provisioning_Guide.md  Vms_specs.md  backup.txt  inventory.ini  playbook.yaml  terraform.tfstate
RAG_server/: .env  custom_types.py  data_loader.py  main.py  pyproject.toml  reranker.py  reset_qdrant.py  streamlit_app.py  vector_db.py
RAG_server/qdrant_storage/: raft_state.json
RAG_server/qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
RAG_server/qdrant_storage/collections/docs/0/segments/0c2d6cc7-89d6-453e-951d-fd9c356e4025/: mutable_id_tracker.mappings
RAG_server/qdrant_storage/collections/docs/0/segments/46d3eac0-3ce5-49cf-931e-6973bbeb79f7/: mutable_id_tracker.mappings
RAG_server/qdrant_storage/collections/docs/0/segments/49c82b4d-efd0-4e73-ae5c-478fb52c3ab0/: mutable_id_tracker.mappings  mutable_id_tracker.versions
RAG_server/qdrant_storage/collections/docs/0/segments/4fd8dca5-a1b7-4acf-8213-d364b3b45a64/: mutable_id_tracker.mappings
RAG_server/qdrant_storage/collections/docs/0/segments/55c64f85-21b5-4b82-949a-005c65291d25/: mutable_id_tracker.mappings  mutable_id_tracker.versions
RAG_server/qdrant_storage/collections/docs/0/segments/585a54d2-f97c-451e-94d1-6ff7376bc92a/: mutable_id_tracker.mappings
RAG_server/qdrant_storage/collections/docs/0/segments/64cbc30e-ff6f-4d51-97fa-27d6b9c0213f/: mutable_id_tracker.mappings
RAG_server/qdrant_storage/collections/docs/0/segments/6b056ff5-974f-4339-ab69-fee7c71a550c/: mutable_id_tracker.mappings  mutable_id_tracker.versions
(+42 files in other folders)
